--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
       <li><a href="./multiple-bg.html">复杂的背景图案</a></li>
       <li><a href="./cicada-stripes.html">伪随机背景</a></li>
       <li><a href="./image-border.html">图片边框</a></li>
+      <li><a href="./ellipse.html">自适应的椭圆</a></li>
+      <li><a href="./parallelogram.html">平行四边形</a></li>
+      <li><a href="./diamond-images.html"></a>菱形图片</li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
     </ul>
   </body>
 </html>
